Tue Nov 28 20:36:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/auto_run_tests.pl:
          Added \n after the message when we can't chdir to a certain
          directory to prevent detecting the wrong test because this
          message is then on the same line as the next test.

Tue Nov 28 20:15:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/MakeProjectCreator/config/ciao_deployment_svnt.mpb:
          Removed include path that didn't exist anymore

Tue Nov 28 16:04:45 UTC 2006  William R. Otte  <wotte@dre.vanderbilt.edu>

        * bin/MakeProjectCreator/config/ciao_config_handlers_base.mpb
        * bin/MakeProjectCreator/config/ciao_nodemanager_svnt.mpb

          Fix for linker warnings/errors on OS X.

Tue Nov 28 14:08:23 UTC 2006  J.T. Conklin  <jtc@acorntoolworks.com>

        * bin/msvc_mpc_auto_compile.pl:

          Reorder @ace_core_dirs so that protocols follows tests, as
          the HTBP protocol tests depend on the Test_Output library.

Tue Nov 28 13:30:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/MakeProjectCreator/config/event.mpb:
        * bin/MakeProjectCreator/config/event_serv.mpb:
        * bin/MakeProjectCreator/config/event_skel.mpb:
        * bin/MakeProjectCreator/config/ftorbutils.mpb:
        * bin/MakeProjectCreator/config/ftrtevent.mpb:
        * bin/MakeProjectCreator/config/ifrservice.mpb:
        * bin/MakeProjectCreator/config/imr_locator.mpb:
        * bin/MakeProjectCreator/config/portablegroup.mpb:
        * bin/MakeProjectCreator/config/rtcorbacommon.mpb:
          Added avoids_corba_e_compact as base project, if we have CORBA/e
          compact we don't have the needed features available to build these
          projects.

Tue Nov 28 13:25:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/MakeProjectCreator/config/avoids_corba_e_micro.mpb:
        * bin/MakeProjectCreator/config/avoids_corba_e_compact.mpb: