@@ -1702,7 +1702,7 @@ Craig Watcham <craigw at ananzi dot co dot za>
 Pit Linnartz <Pit dot Linnartz at t-mobile dot de>
 Peder Norgaard <pcn at pogt dot dk>
 David Ohlemacher <ohlemacher at bbn dot com>
-Ken Kane <kkane at livevault dot com>
+Ken Kane <kenneth dot kane at ironmountain dot com>
 Bill Church <wchurch at ara dot com>
 Udo Berninger <udo dot berninger at siemens dot com>
 Vincent Korkos <vincent dot korkos at fr dot thalesgroup dot com>
